More minor fixes to mm-autocomplete and mm-dropdown - make sure panel has stacking index in mm-autocomplete - make sure disabled reflects - panel position math should account for 1px overlap, not css - _originalDirection should be set whenever direction changes - rename privates in stackable - remove some unnecessary css

--- a/src/shared/sass/_dropdown.scss
+++ b/src/shared/sass/_dropdown.scss
@@ -57,11 +57,6 @@
 	overflow-y: auto;
 }
 
-// TODO: no ::shadow for this
-::shadow input[type=text]:focus {
-	box-shadow: none;
-}
-
 #recycler {
 	height: 100%;
 }
@@ -87,23 +82,11 @@ $border-color: $color-A18 !default;
 
 	&.opened.s {
 		border-radius: 0 0 4px 4px;
-		margin-top: -1px;
 	}
 
 	&.opened.n {
 		border-radius: 4px 4px 0 0;	
 		box-shadow: 0px -6px 12px 0px rgba(0, 0, 0, 0.18);
-		margin-top: 1px;
-	}
-
-	&.opened.w {
-		border-radius: 4px 0 4px 0;
-		margin-right: -1px;
-	}
-
-	&.opened.e {
-		border-radius: 0 4px 0 4px;
-		margin-left: -1px;
 	}
 	
 	#list {
